--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "epayco/epayco-php": "^1.8",
         "laravel-lang/attributes": "^2.13",
         "laravel-lang/common": "^6.7",
         "laravel-lang/http-statuses": "^3.10",
