--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
         ],
         "post-install-cmd": [
             "@php artisan clear-compiled",
-            "@php artisan optimize"
+            "@php artisan config:cache",
+            "@php artisan route:cache",
+            "@php artisan view:cache"
         ]
     },
     "extra": {
