--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,10 @@
+
 [phases.setup]
 nixPkgs = ['php82', 'php82Packages.composer']
 
 [phases.install]
 cmds = [
-    'composer install --no-dev --optimize-autoloader'
+    'composer install --no-dev --optimize-autoloader --no-interaction'
 ]
 
 [phases.build]
