--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,19 @@
 
+[providers]
+providers = ['php', 'node']
+
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer']
+nixPkgs = ['php82', 'php82Packages.composer', 'nodejs_18']
 
 [phases.install]
 cmds = [
-    'composer install --no-dev --optimize-autoloader --no-interaction'
+    'composer install --no-dev --optimize-autoloader --no-interaction',
+    'npm ci --only=production'
 ]
 
 [phases.build]
 cmds = [
+    'npm run build',
     'php artisan config:cache',
     'php artisan route:cache',
     'php artisan view:cache'
