--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,17 +3,15 @@
 providers = ['php', 'node']
 
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer', 'nodejs_18']
+nixPkgs = ['php82', 'php82Packages.composer']
 
 [phases.install]
 cmds = [
-    'composer install --no-dev --optimize-autoloader --no-interaction',
-    'npm ci --only=production'
+    'composer install --no-dev --optimize-autoloader --no-interaction'
 ]
 
 [phases.build]
 cmds = [
-    'npm run build',
     'php artisan config:cache',
     'php artisan route:cache',
     'php artisan view:cache'
